# migrate-3.7.2

./: .gitattributes  CMakeLists.txt  HISTORY  README  README_PARALLEL_GENERAL  README_PARALLEL_WINDOWS  migrate.html
contribution/: ._bayes-posthoc-analysis_Fourdrilis.R  compile_icc
example/: README  README-old  bayesfile  infile.4pop  infile.ep  infile.msat  infile.seq  infile.xaaaaxaaaaxaaaax  infile.xabaaxabbaxaabax  mighistfile  outfile-4pop  outfile-bayes  outfile-bayes-saved  outfile-bayes-saved-012015  outfile-bayes1  outfile-ml  outfile-ml-saved  outfile-xabaaxabbaxaabax1  parmfile  parmfile.4pop1  parmfile.4pop3  parmfile.4pop4  parmfile.gugu  parmfile.seq  parmfile.seq1  parmfile.test  parmfile.testbayes  parmfile.testml  parmfile4pop2  sumfile  testtime  time_clang  timerecorder  tmp  tmp2
example/grouptest/: outfile-xabaaxabbaxaabax1  outfile-xabaaxabbaxaabax2  parmfile.4pop1  parmfile.4pop2
src/: ._migshelltemplate.app  1  CMakeLists.txt  Makefile  Makefile.in  aic.c  aic.h  autotune.c  autotune.h  bayes.c  bayes.h  broyden.c  broyden.h  calculator.c  combroyden2.c  conf.h  conf.h.in  config.status  configure  configure.in  correlation.c  correlation.h  data.c  data.h  definitions.h  fst.c  gammalike.c  gammalike.h  heating.c  heating.h  histogram.c  histogram.h  jamfile  joint-chains.c  joint-chains.h  laguerre.c  laguerre.h  lrt.c  lrt.h  main.c  (+48 more)
src/haru/: CMakeLists.txt  PdfCIDFontDef.cc  PdfCIDWItem.h  PdfCMap.cc  PdfFonts.cc  PdfLList.cc  PdfLList.h  PdfMbFonts.cc  PdfPngImage.cc  PdfPngImage.h  README  hpdf_png.h  hpdf_types.h  libharu.h  makefile.msvc
src/haru/examples/type1/: README
src/migrate_kit/: about  fix_multiple_openmpi  install_migrate  migrate_kitintro  migratehelp
src/migrateshell.app/migrate_kit/: fastmigrate-n  findshell  install_migrate  install_openmpi  migrate-n  migrate-n-mpi
src/migshelltemplate.app/Contents/Resources/Scripts/: main.scpt
src/testsuite/testsuite/: infile.hap  infile.iam  infile.inheritance  infile.msat  infile.smm  parmfile.bayes  parmfile.iam  parmfile.ml
src/zlib/: CMakeLists.txt  README  example  example64  examplesh  libz.so.1.2.5  minigzip  minigzip64  minigzipsh
